--- a/apps/Web-App/src/components/story/components/ui/Loaders/Loader/Loader.mdx
+++ b/apps/Web-App/src/components/story/components/ui/Loaders/Loader/Loader.mdx
@@ -9,11 +9,7 @@ import {
     DrawerTitle,
     DrawerDescription,
     DrawerClose,
-    DrawerFooter,
-    Collapse,
-    CollapseTrigger,
-    CollapseContent,
-    CollapseItem,
+    DrawerFooter
 } from '@layout';
 
 <Meta of={LoaderStories} />
