--- a/apps/Web-App/src/components/story/components/layout/Collapse/Collapse.mdx
+++ b/apps/Web-App/src/components/story/components/layout/Collapse/Collapse.mdx
@@ -1,5 +1,5 @@
 import { Meta, Canvas, Controlls,Primary } from '@storybook/blocks';
-import { CollapseGroup, Collapse } from '@layout/Collapse';
+import * as Collapse from '@layout/Collapse';
 import * as CollapseStories from './Collapse.stories';
 
 <Meta of={CollapseStories}/>
@@ -7,40 +7,40 @@ import * as CollapseStories from './Collapse.stories';
 
 <Primary/>
 
-<CollapseGroup title='Different Types'>
-    <Collapse trigger="Single Collapse" title="Title" defaultExpanded>
+<Collapse.Group title='Different Types'>
+    <Collapse.Object trigger="Single Collapse" title="Title" defaultExpanded>
         ```tsx
         import { Collapse, CollapseGroup } from '@layout/.'
 
-        <CollapseGroup>
-            <Collapse trigger="Single Collapse" title="Title" defaultExpanded>
+        <Collapse.Group>
+            <Collapse.Object trigger="Single Collapse" title="Title" defaultExpanded>
             // Children
-            </Collapse>
-        </CollapseGroup>
+            </Collapse.Object>
+        </Collapse.Group>
         ```
-    </Collapse>
-    <Collapse trigger="Multiple Collapses" title="">
-        <CollapseGroup>
-            <Collapse trigger=" " title="Description" defaultExpanded>
+    </Collapse.Object>
+    <Collapse.Object trigger="Multiple Collapses" title="">
+        <Collapse.Group>
+            <Collapse.Object trigger=" " title="Description" defaultExpanded>
                 - This Multicolapse can hold multiple collapses.
                 - Collapses can be nested in a CollapseGroup.
                 - You can add a title to the CollapseGroup.
                 - if you pass the defaultExpanded prop to the Collapse it will be expanded by default.
                 - After you close any Collapse its Components state will be resetet to default.
-            </Collapse>
-            <Collapse trigger="Code" title="Code">
+            </Collapse.Object>
+            <Collapse.Object trigger="Code" title="Code">
                 ```tsx
                 import { Collapse, CollapseGroup } from '@layout/.'
-                <CollapseGroup title="Title">
-                    <Collapse trigger="Description" title="Title" defaultExpanded>
+                <Collapse.Group title="Title">
+                    <Collapse.Object trigger="Description" title="Title" defaultExpanded>
                         // Description
-                    </Collapse>
-                    <Collapse trigger="Code" title="Title">
+                    </Collapse.Object>
+                    <Collapse.Object trigger="Code" title="Title">
                         // Code
-                    </Collapse>
-                </CollapseGroup>
+                    </Collapse.Object>
+                </Collapse.Group>
                 ```
-            </Collapse>
-        </CollapseGroup>
-    </Collapse>
-</CollapseGroup>
+            </Collapse.Object>
+        </Collapse.Group>
+    </Collapse.Object>
+</Collapse.Group>
